--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="one_text">Аршин</string>
     <string name="result_text"> Результат </string>
     <string name="b_text">ОК</string>
+    <string name="next_text">Next</string>
 
 </resources>
